# Temp-BMC

./: .gitignore  .pylintrc  README.md  alembic.ini  mypi.ini  pyproject.toml  tox.ini
authentication/: database.py  main.py  settings.py
authentication/alembic/: env.py  script.py.mako
authentication/crud/: base_backend.py  email_service.py  otp_verification.py  user_verify.py
authentication/dependencies/: redis_connection.py
authentication/models/api/: otp_validation.py
authentication/routers/: user_verification.py
authentication/templates/: otp_email.html
authentication/utils/: constants.py  utils.py
