[tool.poetry]
name = "partner-onboarding"
version = "0.1.0"
description = "onboarding and authenticating partner"
authors = ["BMC"]
packages = [{ include = "authentication" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
alembic = "^1.15.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"
pyjwt = "^2.6.0"
fastapi = "0.96.0"
httpx = "^0.23.1"
pydantic = "^1.10.2"
ddtrace = "^3.2.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
jinja2 = "^3.1.6"
aiosmtplib = "^4.0.0"
aioredis = "^2.0.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
mypy = "^0.982"
black = "^22.3.0"
isort = "^5.10.1"
tox = "^3.25.0"
bandit = "^1.7.4"
pre-commit = "^2.18.1"
pylint = "^2.13.8"
coverage = "^6.4.1"
tox-poetry = "^0.4.1"
pytest-alembic = "^0.8.4"
pytest-mock-resources = "^2.6.3"
types-redis = "^4.6.0.20241004"
